save_pre not called when saving startup.blend file #42540

Closed
opened 2014-11-08 01:59:50 +01:00 by Bob Kuczewski · 5 comments

System Information
Linux

Blender Version
Broken: 2.72b 9e963ae

Short description of error
Python "save_pre" not called when saving startup.blend file via File->Save_Startup_File

Exact steps for others to reproduce the error

  1. Load the attached addon.
  2. Observe that handlers report:
 Loading of startup.blend file
 Loading of named .blend files
 Saving of named .blend files
  1. Observe that handlers do not report:
 Saving startup file via File->Save_Startup_File

Blender Addon:

"""
This program prints when load_post or save_pre are called.
"""

bl_info = {
  "version": "0.50",
  "name": "Load Post / Save Pre Test",
  'author': 'Bob',
  "location": "Properties > Scene",
  "category": "Blender Experiments"
  }

import bpy

from bpy.app.handlers import persistent

@persistent
def load_post(context):
    print ( "load_post() has been called" )

@persistent
def save_pre(context):
    print ( "save_pre() has been called" )

def register():
  print ("Registering ", __name__)
  bpy.app.handlers.save_pre.append ( save_pre )
  bpy.app.handlers.load_post.append ( load_post )

def unregister():
  print ("Unregistering ", __name__)
  bpy.app.handlers.save_pre.remove ( save_pre )
  bpy.app.handlers.load_post.remove ( load_post )

if __name__ == "__main__":
  register()
**System Information** Linux **Blender Version** Broken: 2.72b 9e963ae **Short description of error** Python "save_pre" not called when saving startup.blend file via File->Save_Startup_File **Exact steps for others to reproduce the error** 1. Load the attached addon. 2. Observe that handlers report: ``` Loading of startup.blend file Loading of named .blend files Saving of named .blend files ``` 3. Observe that handlers do not report: ``` Saving startup file via File->Save_Startup_File ``` Blender Addon: ``` """ This program prints when load_post or save_pre are called. """ bl_info = { "version": "0.50", "name": "Load Post / Save Pre Test", 'author': 'Bob', "location": "Properties > Scene", "category": "Blender Experiments" } import bpy from bpy.app.handlers import persistent @persistent def load_post(context): print ( "load_post() has been called" ) @persistent def save_pre(context): print ( "save_pre() has been called" ) def register(): print ("Registering ", __name__) bpy.app.handlers.save_pre.append ( save_pre ) bpy.app.handlers.load_post.append ( load_post ) def unregister(): print ("Unregistering ", __name__) bpy.app.handlers.save_pre.remove ( save_pre ) bpy.app.handlers.load_post.remove ( load_post ) if __name__ == "__main__": register() ```
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @BlenderHawk-1

Added subscriber: @BlenderHawk-1

This issue was referenced by aac2db33df

This issue was referenced by aac2db33df448f87431629b794c47c7ad1da044e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit aac2db33df.

Closed by commit aac2db33df.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42540
No description provided.