Fix T42540: save_pre and save_post handlers not called when saving startup.blend.